kubernetes/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: arduino-libraries
  labels:
    app: arduino-libraries
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: arduino-libraries
